Add machete file view provider - 2nd round of fixes